# Lightning

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Lightning.h  Math.h  Search.h  Sort.h  Statistics.h  String.h
tests/: CMakeLists.txt  Math_test.cpp
